2007-11-20  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-17-02
	* REALLY fix bug reported by MZ (tested)
	* add 'Search' field to import configuration panel

2007-11-20  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-17-01
	* parser fixes (JH)
	* fix bug reported by MZ which would prevent configuration exports
	* fid PythonParser bug (handle parentheses within string values
	correctly)
	* reactivate the last selected node after canceling the search
	* add Options meny and a checkbox to enable/disable InputTag
	tracking (per path, count the number of InputTag values with no
	matching upstream label within that path)

2007-11-19  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-17-00
	* add 'search' functionality to the GUI
	* when a search is active, parameters of modules matching the
	search can be modified; nothing can be inserted/removed from the
	configuration though! Might be extended later.

2007-11-18  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-16-01
	* gui: add ability to copy existing instances

2007-11-18  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-16-00
	* gui rewrite/cleanup
	* Iterator cleanup
	* removed Converter.java

2007-11-14  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-15-06
	* add ability to convert a fragment (*.cff) in gui's convert
	dialog

2007-11-14  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-15-05
	* fix ascii converter: sequences converted before paths (UB)

2007-11-14  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-15-04
	* oracle-related (what else?) bug fix to ConfDB.java

2007-11-14  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-15-03
	* fix ordering bug (oracle) reported by Martin
	* fix convert dialog to correctly handle requested
	sequences/modules

2007-11-13  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
